--- a/sass/components/_tag.scss
+++ b/sass/components/_tag.scss
@@ -1,12 +1,12 @@
 .tags {
   display: flex;
   flex-wrap: wrap;
-  gap: .5em;
-  margin: .25em 0;
+  gap: 0.5em;
+  margin: 0.25em 0;
   .tag {
-    padding: .125em;
+    padding: 0.125em;
     line-height: 1;
-    box-shadow: 0 0 0 1px var(--ring-color, rgba(#000, .2));
+    box-shadow: 0 0 0 1px var(--ring-color, rgba(#000, 0.2));
     border-radius: $border-radius-tiny;
   }
 }
