--- a/sass/pages-templates/_cv.scss
+++ b/sass/pages-templates/_cv.scss
@@ -34,20 +34,16 @@
 // *
 // * CV Header
 // *
-.cv-header {
-  grid-column: 1 / 3;
-  display: grid;
-  gap: 0 1cm;
-  grid-template-columns: 33% 67%;
-  align-items: center;
-
+.cv-portrait {
   img {
     border-radius: 50%;
     max-width: 128px;
     margin: auto;
     display: block;
   }
-
+}
+.cv-head {
+  align-self: center;
   .name {
     font-size: 52px;
     line-height: 1;
